--- a/app/background.html
+++ b/app/background.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" ng-app=backgroundModule ng-csp>
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -7,6 +7,17 @@
   </head>
 
   <body>
+    <!-- build:js popup.js -->
+    <script src="js/jquery/jquery.min.js"></script>
+    <script src="js/underscore/underscore.js"></script>
+    <script src="js/bootstrap/bootstrap.min.js"></script>
+    <script src="js/angular/angular.min.js"></script>
+    <script src="scripts/app/modules/angular-underscore.min.js"></script>
+    <script src="scripts/app/modules/ui-bootstrap-0.9.0.min.js"></script>
+    <script src="scripts/app/app.js"></script>
+    <script src="scripts/app/services/storage.js"></script>
+    <script src="scripts/app/controllers/controllers.js"></script>
+    <!-- endbuild -->
     <!-- build:js background.js -->
     <script src="scripts/background.js"></script>
     <!-- endbuild -->
